add more pictures

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           </div>
           <div class="row" id="myrthetielman">
             <div class="col-md-4 feature">
-              <img src="img/speaker-2.png" class="keynote-img">
+              <img src="img/deborah_richards.jfif" class="keynote-img">
               <h3>Deborah Richards</h3>
               <p>Macquarie University</p>
               <ul class="speaker-social">
@@ -218,7 +218,7 @@
             </ul>
           </div>
           <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/amal_abdulrahman.jpg" class="speaker-img">
             <h3>Amal Abdulrahman</h3>
             <p>Delft University of Technology</p>
             <ul class="speaker-social">
@@ -226,7 +226,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/deborah_richards.jfif" class="speaker-img">
             <h3>Deborah Richards</h3>
             <p>Macquarie University</p>
             <ul class="speaker-social">
@@ -242,7 +242,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/bibhas_chakraborty.jfif" class="speaker-img">
             <h3>Bibhas Chakraborty</h3>
             <p>National University of Singapore, Duke University</p>
             <ul class="speaker-social">
@@ -250,7 +250,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/ananya_bhattacharjee.png" class="speaker-img">
+            <img src="img/ananya_bhattacharjee.jpg" class="speaker-img">
             <h3>Ananya Bhattacharjee</h3>
             <p>University of Toronto</p>
             <ul class="speaker-social">
@@ -258,7 +258,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/linwei_he.jfif" class="speaker-img">
             <h3>Linwei He</h3>
             <p>Tilburg University</p>
             <ul class="speaker-social">
@@ -266,7 +266,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/mark_neerincx.jpg" class="speaker-img">
             <h3>Mark A. Neerincx</h3>
             <p>Delft University of Technology, TNO</p>
             <ul class="speaker-social">
@@ -282,7 +282,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-2.png" class="speaker-img">
+            <img src="img/nezih_younsi.png" class="speaker-img">
             <h3>Nezih Younsi</h3>
             <p>Sorbonne University</p>
             <ul class="speaker-social">
@@ -290,7 +290,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-2.png" class="speaker-img">
+            <img src="img/tibor_bosse.png" class="speaker-img">
             <h3>Tibor Bosse</h3>
             <p>Radboud University</p>
             <ul class="speaker-social">
@@ -298,7 +298,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-3.png" class="speaker-img">
+            <img src="img/annemiek_linn.jpeg" class="speaker-img">
             <h3>Annemiek Linn</h3>
             <p>University of Amsterdam</p>
             <ul class="speaker-social">
@@ -306,7 +306,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-5.png" class="speaker-img">
+            <img src="img/crystal_smit.jpeg" class="speaker-img">
             <h3>Crystal Smit</h3>
             <p>Erasmus University Rotterdam</p>
             <ul class="speaker-social">
@@ -314,7 +314,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/speaker-4.png" class="speaker-img">
+            <img src="img/willem-paul_brinkman.jpeg" class="speaker-img">
             <h3>Willem-Paul Brinkman</h3>
             <p>Delft University of Technology</p>
             <ul class="speaker-social">
