--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="row me-row content-ct yelloworange" id="organizers">
           <h2 class="row-title">Organizers</h2>
           <div class="col-md-4 feature">
-            <img src="img/speaker-3.png" class="speaker-img">
+            <img src="img/nele_albers.jpg" class="speaker-img">
             <h3>Nele Albers</h3>
             <p>Delft University of Technology</p>
             <ul class="speaker-social">
@@ -298,7 +298,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/annemiek_linn.jpeg" class="speaker-img">
+            <img src="img/annemiek_linn.jpg" class="speaker-img">
             <h3>Annemiek Linn</h3>
             <p>University of Amsterdam</p>
             <ul class="speaker-social">
@@ -306,7 +306,7 @@
             </ul>
           </div>
 		  <div class="col-md-4 feature">
-            <img src="img/crystal_smit.jpeg" class="speaker-img">
+            <img src="img/crystal_smit.jfif" class="speaker-img">
             <h3>Crystal Smit</h3>
             <p>Erasmus University Rotterdam</p>
             <ul class="speaker-social">
