--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="This is a workshop of the 19th International Conference on Persuasive Technology 2024">
   <meta name="author" content="Nele Albers">
-  <title>Algorithmic Behavior Change Support</title>
+  <title>Workshop on Algorithmic Behavior Change Support</title>
   <link rel="icon" href="https://raw.githubusercontent.com/ALBECS-Workshop/ALBECS-Workshop.github.io/main/img/conversation.png">
 
   <!-- Bootstrap -->
