--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Call for Contributions</h2>
               <div class="col-md feature">
-                <p> Submissions to this workshop are in the form of short position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question).
+                <p> Submissions to this workshop are in the form of short position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question). The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
                 </p>
                 <p>
-                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to xxx. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for xxx.
+                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for xxx.
                 </p>
-                <p>  All submissions should adhere to <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have at most xxx pages (excluding acknowledgments and references).
+                <p>  All submissions should adhere to <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have at most xxx pages (excluding acknowledgments and references). Workshop proceedings will be published in <a href="https://ceur-ws.org/HOWTOSUBMIT.html">CEUR</a> under Creative Commons License Attribution 4.0 International (CC BY 4.0).
                 </p> 
                 <p><b>Please anonymize your submission.</b></p>
                 <p></p>
@@ -339,19 +339,26 @@
                   <tbody>
                     <tr>
                       <td class="tg-lboi">9h00</td>
-                      <td class="tg-lboi" colspan="2">Activity 1</td>
+                      <td class="tg-lboi" colspan="2">Keynote 1</td>
+                    </tr>
+					<tr>
+                      <td class="tg-lboi">10h00</td>
+                      <td class="tg-vrnj" colspan="2">Break</td>
                     </tr>
                     <tr>
-                      <td class="tg-lboi" rowspan="2">9h30</td>
-                      <td class="tg-lboi" rowspan="2">Lightning talks 1<br><br><i>Topic</i></td>
+                      <td class="tg-lboi" rowspan="2">10h15</td>
+                      <td class="tg-lboi" rowspan="2">Session 1<br><br><i>Topic</i></td>
                       <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
                     </tr>
                     <tr>
                       <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
                     </tr>
+					<tr>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
+                    </tr>
                     <tr>
-                      <td class="tg-lboi">10h00</td>
-                      <td class="tg-vrnj" colspan="2">Break</td>
+                      <td class="tg-lboi">12h15</td>
+                      <td class="tg-vrnj" colspan="2">Lunch</td>
                     </tr>
                     <tr>
                       <td class="tg-cly1">16h30</td>
@@ -360,7 +367,12 @@
                     <tr>
                       <td class="tg-cly1">17h00</td>
                       <td class="tg-vrnj" colspan="2">End</td>
-                    </tr>                  </tbody>
+                    </tr>     
+                    <tr>
+                      <td class="tg-cly1">19h00</td>
+                      <td class="tg-vrnj" colspan="2">Optional dinner with workshop participants at restaurant TBD.</td>
+                    </tr>     					
+					</tbody>
                 </table>
               </div>
             </div>
