--- a/index.html
+++ b/index.html
@@ -362,7 +362,26 @@
                     </tr>
                     <tr>
                       <td class="tg-cly1">13h30</td>
-                      <td class="tg-cly1" colspan="2">Activity x</td>
+                      <td class="tg-cly1" colspan="2">Keynote 2</td>
+                    </tr>
+					<tr>
+                      <td class="tg-lboi">14h30</td>
+                      <td class="tg-vrnj" colspan="2">Break</td>
+                    </tr>
+					<tr>
+                      <td class="tg-lboi" rowspan="3">14h45</td>
+                      <td class="tg-lboi" rowspan="3">Session 2<br><br><i>Topic</i></td>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/bhH28aCnLQHVmCl"><b>Title Talk 1</b></a><br><i>Authors Talk 1</i></td>
+                    </tr>
+                    <tr>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 2</b></a><br><i>Authors Talk 2</i></td>
+                    </tr>
+					<tr>
+                      <td class="tg-cly1"><a href="https://surfdrive.surf.nl/files/index.php/s/CMps2ZHj8cDughI"><b>Title Talk 3</b></a><br><i>Authors Talk 3</i></td>
+                    </tr>
+					<tr>
+                      <td class="tg-cly1">16h45</td>
+                      <td class="tg-cly1" colspan="2">Reflection</td>
                     </tr>
                     <tr>
                       <td class="tg-cly1">17h00</td>
