--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
             <h4>Wollongong, Australia</h4>
             
-            <a href="https://2024.persuasivetech.org/" class="btn btn-lg btn-red">Register Now <span class="ti-arrow-right"></span></a>
+            <a href="https://2024.persuasivetech.org/" class="btn btn-lg btn-red">Submit Now <span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
             <img src="img/conversation.png" class="rocket animated bounce">
@@ -141,9 +141,9 @@
                 <p> Submissions to this workshop are in the form of short position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question). The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
                 </p>
                 <p>
-                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for xxx.
+                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for the workshops/tutorials at Persuasive Technology 2024.
                 </p>
-                <p>  All submissions should adhere to <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have at most xxx pages (excluding acknowledgments and references). Workshop proceedings will be published in <a href="https://ceur-ws.org/HOWTOSUBMIT.html">CEUR</a> under Creative Commons License Attribution 4.0 International (CC BY 4.0).
+                <p>  All submissions should adhere to either <a href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">the CEUR Workshop Proceedings guidelines</a> or <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have either at most 6 (short paper) or 12 pages (long paper), excluding acknowledgments and references. Workshop proceedings will be published in <a href="https://ceur-ws.org/HOWTOSUBMIT.html">CEUR</a> under Creative Commons License Attribution 4.0 International (CC BY 4.0). This means that the final accepted papers will be published in the CEUR format.
                 </p> 
                 <p><b>Please anonymize your submission.</b></p>
                 <p></p>
@@ -403,7 +403,7 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Registration</h2>
               <div class="col-md feature">
-                <p>Please register through <a href="https://2024.persuasivetech.org/">the Persuasive Technology conference website</a>.</p>
+                <p>Please register through <a href="https://2024.persuasivetech.org/index.php/registration/">the Persuasive Technology conference website</a>. Note that registration fees are in Australian Dollar (AUD).</p>
               </div>
             </div>
           </div>
