--- a/index.html
+++ b/index.html
@@ -123,10 +123,14 @@
               <h2 class="row-title">This Workshop</h2>
               <div class="col-md feature">
                 <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support in behavior change applications. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
-                <p></p>
+                <p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
-                    <li>Topic 1</li>
+                    <li>Design methodologies and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
+					<li>Novel algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning ...) and their application in behavior change contexts such as education, health, or sustainability</li>
+					<li>FAIR implementation of algorithms</li>
+					<li>Evaluation methodologies for algorithms (e.g., micro-randomized trials)</li>
+					<li>Use of algorithms in mature systems (e.g., clincical practice)</li>
                   </b>
                 </ul>
               </div>
