--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
                 <p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
-                    <li>Design methodologies and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
-					<li>Novel algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning ...) and their application in behavior change contexts such as education, health, or sustainability</li>
+                    <li>Design methods and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
+					<li>Novel algorithms</li>
+					<li>Application of algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning) in behavior change contexts such as education, health, or sustainability</li>
 					<li>FAIR implementation of algorithms</li>
-					<li>Evaluation methodologies for algorithms (e.g., micro-randomized trials)</li>
+					<li>Evaluation methods for algorithms (e.g., micro-randomized trials)</li>
 					<li>Use of algorithms in mature systems (e.g., clincical practice)</li>
                   </b>
                 </ul>
