--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <b>
                     <li>Design methods and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
 					<li>Novel algorithms</li>
-					<li>Application of algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning) in behavior change contexts such as education, health, or sustainability</li>
+					<li>Application of algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning) in behavior change contexts</li>
 					<li>FAIR implementation of algorithms</li>
 					<li>Evaluation methods for algorithms (e.g., micro-randomized trials)</li>
 					<li>Use of algorithms in mature systems (e.g., clincical practice)</li>
