--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Call for Contributions</h2>
               <div class="col-md feature">
-                <p> Submissions to this workshop are in the form of short position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question). The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
+                <p> Submissions to this workshop are in the form of position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question). The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
                 </p>
                 <p>
                   Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for the workshops/tutorials at Persuasive Technology 2024.
