--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<li>Application of algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning) in behavior change contexts</li>
 					<li>FAIR implementation of algorithms</li>
 					<li>Evaluation methods for algorithms (e.g., micro-randomized trials)</li>
-					<li>Use of algorithms in mature systems (e.g., clincical practice)</li>
+					<li>Effectiveness of (components of) algorithms in simulated, experimental, or in-the-wild settings</li>
                   </b>
                 </ul>
               </div>
