--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <h3>This workshop is part of the 19th International Conference on Persuasive Technology 2024</h3>
             <h4>Wollongong, Australia</h4>
             
-            <a href="https://2024.persuasivetech.org/" class="btn btn-lg btn-red">Submit Now <span class="ti-arrow-right"></span></a>
+            <a href="https://urldefense.com/v3/__https://easychair.org/conferences/?conf=albecs2024__;!!PAKc-5URQlI!5xQGE72l3dULDfjm37Pk1sdcBojzfbYC67vrt_rL60M9_XdkKSaZVn6MiJNJKz96lHDLOKUHlCvq7xblg2RVhE0dCqt8DPGA$" class="btn btn-lg btn-red">Submit Now <span class="ti-arrow-right"></span></a>
           </div>
           <div class="col-md-5 hidden-xs">
             <img src="img/conversation.png" class="rocket animated bounce">
@@ -152,7 +152,7 @@
                 </p> 
                 <p><b>Please anonymize your submission.</b></p>
                 <p></p>
-                <p>  You can submit through easychair: add link. </p>
+                <p>  You can submit through <a href="https://urldefense.com/v3/__https://easychair.org/conferences/?conf=albecs2024__;!!PAKc-5URQlI!5xQGE72l3dULDfjm37Pk1sdcBojzfbYC67vrt_rL60M9_XdkKSaZVn6MiJNJKz96lHDLOKUHlCvq7xblg2RVhE0dCqt8DPGA$">easychair</a>. </p>
                 
                 <p></p>
               </div>
