add refined info

--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">This Workshop</h2>
               <div class="col-md feature">
-                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support in behavior change applications. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
+                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. Thus, while the Persuasive Technolog conference considers all forms of technology, the focus of this workshop is on algorithms (e.g., based on logistic regression, reinforcement learning, recommender systems) that support behavior change. We are thereby interested in algorithms at both the macro level (i.e., which are part of behavior change applications) and the micro level (i.e., which support forms of behavior change as part of a technology that has a goal other than behavior change). We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support for behavior change. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
                 <p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
                     <li>Design methods and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
 					<li>Novel algorithms</li>
-					<li>Application of algorithms (e.g., using logistic or linear regression, recommender systems, reinforcement learning) in behavior change contexts</li>
+					<li>Application of algorithms in behavior change contexts</li>
 					<li>FAIR implementation of algorithms</li>
 					<li>Evaluation methods for algorithms (e.g., micro-randomized trials)</li>
 					<li>Effectiveness of (components of) algorithms in simulated, experimental, or in-the-wild settings</li>
@@ -143,12 +143,25 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">Call for Contributions</h2>
               <div class="col-md feature">
-                <p> Submissions to this workshop are in the form of position papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants (e.g., provide feedback on an idea for an algorithm, serve as a focus group, or brainstorm on a research question). The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
+                <p> 
+				  Submissions to this workshop are in the form of papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants. Working with other workshop participants on one's own problem is a unique opportunity to get input from a large number of experts. Examples include:
                 </p>
+				<ul>
+                    <li>Questionnaire creation: creating question formulations in small groups, discussing if questions measure intended constructs</li>
+					<li>Instructions for study: letting workshop participants follow an initial instruction set to wee where they get stuck, which things are unclear, or which results they would get</li>
+					<li>Applying design guidelines: after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</li>
+					<li>Algorithm design: based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</li>
+					<li>Confirming guidelines for algorithm design: based on an initial set of guidelines one wants to use for their algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</li>
+					<li>Establishing codes for a thematic analysis: based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</li>
+					<li>Establishing themes for a thematic analysis: based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</li>
+                </ul>
+				<p>
+				  The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
+				</p>
                 <p>
-                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for the workshops/tutorials at Persuasive Technology 2024.
+                  Upon acceptance, at least 1 author should attend the workshop in person and be ready to 1) present their work in a short 7-10 minute presentation and 2) work on their problem with the workshop participants for about 30 minutes. On rejection, you are also welcome to still join our workshop. To attend the workshop, participants must be registered for the workshops/tutorials at Persuasive Technology 2024.
                 </p>
-                <p>  All submissions should adhere to either <a href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">the CEUR Workshop Proceedings guidelines</a> or <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers should be written in English and have either at most 6 (short paper) or 12 pages (long paper), excluding acknowledgments and references. Workshop proceedings will be published in <a href="https://ceur-ws.org/HOWTOSUBMIT.html">CEUR</a> under Creative Commons License Attribution 4.0 International (CC BY 4.0). This means that the final accepted papers will be published in the CEUR format.
+                <p>  All submissions should adhere to either <a href="https://www.overleaf.com/latex/templates/template-for-submissions-to-ceur-workshop-proceedings-ceur-ws-dot-org/wqyfdgftmcfw">the CEUR Workshop Proceedings guidelines</a> or <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">the Springer LNCS guidelines</a>. Papers describing the authors' work should be written in English and have either 2-6 (short paper) or 7-12 pages (long paper), excluding references. Workshop proceedings will be published in <a href="https://ceur-ws.org/HOWTOSUBMIT.html">CEUR</a> under Creative Commons License Attribution 4.0 International (CC BY 4.0). This means that the final accepted papers will be published in the CEUR format. In addition to the papers describing the authors' work, please include in an appendix the description of the problem you would like to work on together with workshop participants. This description does not count toward the page limit and will not be published.
                 </p> 
                 <p><b>Please anonymize your submission.</b></p>
                 <p></p>
@@ -165,9 +178,9 @@
               <h2 class="row-title">Important Dates</h2>
               <div class="col-md feature">
                 <ul>
-                  <li>Submission deadline: xxx </li>
-                  <li>Notification deadline: xxx </li>
-                  <li>Camera Ready: xxx </li>
+                  <li>Submission deadline: 22nd February 2024 </li>
+                  <li>Notification deadline: 29th February 2024 </li>
+                  <li>Camera Ready: 3rd April 2024 </li>
                   <li>Workshop: 10th April 2024</li>
                 </ul>
               </div>
