different list format

--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
             <div class="row me-row content-ct">
               <h2 class="row-title">This Workshop</h2>
               <div class="col-md feature">
-                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. Thus, while the Persuasive Technolog conference considers all forms of technology, the focus of this workshop is on algorithms (e.g., based on logistic regression, reinforcement learning, recommender systems) that support behavior change. We are thereby interested in algorithms at both the macro level (i.e., which are part of behavior change applications) and the micro level (i.e., which support forms of behavior change as part of a technology that has a goal other than behavior change). We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. The broader objective of this workshop is to strengthen the community of people working on adaptive support for behavior change. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
-                <p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
+                <p>This workshop brings together researchers, designers, developers, practitioners, and educators who are interested in the concept, development, evaluation, and impact of algorithmic behavior change support. Thus, while the Persuasive Technolog conference considers all forms of technology, the focus of this workshop is on algorithms (e.g., based on logistic regression, reinforcement learning, recommender systems) that support behavior change. We are thereby interested in algorithms at both the macro level (i.e., which are part of behavior change applications) and the micro level (i.e., which support forms of behavior change as part of a technology that has a goal other than behavior change). We explicitly invite participants from various backgrounds such as artificial intelligence, human-computer interaction, psychology, medical practice, and ethics of technology to contribute their perspectives and experiences. </p>
+                <p>The broader objective of this workshop is to strengthen the community of people working on adaptive support for behavior change. To this end, the workshop aims to create a lively exchange of ideas that benefits both the current and future research of the individual workshop participants. Specifically, the workshop's aim is to a) learn about each other's work, b) jointly work on problems of the workshop participants, and c) establish a vision for future work on algorithmic behavior change support.</p>
+				<p>Below is a non-exhaustive list of possible topics in the context of algorithms for adaptive behavior change support:</p>
                 <ul>
                   <b>
                     <li>Design methods and guidelines for algorithms (e.g., accounting for ethical and societal values, augmented or hybrid intelligence)</li>
@@ -147,14 +148,20 @@
 				  Submissions to this workshop are in the form of papers describing both the authors' work and a problem that they would like to work on together with the other workshop participants. Working with other workshop participants on one's own problem is a unique opportunity to get input from a large number of experts. Examples include:
                 </p>
 				<ul>
-                    <li>Questionnaire creation: creating question formulations in small groups, discussing if questions measure intended constructs</li>
-					<li>Instructions for study: letting workshop participants follow an initial instruction set to wee where they get stuck, which things are unclear, or which results they would get</li>
+                    <li> </li>
+					<li>: </li>
 					<li>Applying design guidelines: after having developed design guidelines, asking workshop participants how they would apply the guidelines to their own research or how they (dis)agree with the guidelines</li>
 					<li>Algorithm design: based on an initial algorithm idea, asking workshop participants for important concepts or guidelines to account for when further developing or implementing the algorithm</li>
 					<li>Confirming guidelines for algorithm design: based on an initial set of guidelines one wants to use for their algorithm design, asking workshop participants how they (dis)agree with these guidelines to establish community agreement</li>
 					<li>Establishing codes for a thematic analysis: based on free-text responses providing feedback on an algorithm used in a previous study, asking workshop participants to in small groups come up with codes describing the concerns of study participants</li>
 					<li>Establishing themes for a thematic analysis: based on codes describing the concerns of study participants about an algorithm, asking workshop participants to discuss possible themes</li>
                 </ul>
+				<dl>
+					<dt>Questionnaire creation:</dt>
+					<dd>- creating question formulations in small groups, discussing if questions measure intended constructs</dd>
+					<dt>Instructions for study:</dt>
+					<dd>- letting workshop participants follow an initial instruction set to see where they get stuck, which things are unclear, or which results they would get</dd>
+				</dl>
 				<p>
 				  The authors should clearly describe how they think that working on their problem with the workshop participants could benefit their work.
 				</p>
